--- a/package.json
+++ b/package.json
@@ -11,17 +11,22 @@
   "dependencies": {
     "@next/font": "13.1.6",
     "@supabase/supabase-js": "^2.8.0",
+    "@tanstack/react-query": "^4.28.0",
+    "@trpc/client": "^10.17.0",
+    "@trpc/next": "^10.17.0",
+    "@trpc/react-query": "^10.17.0",
+    "@trpc/server": "^10.17.0",
     "@types/node": "18.11.18",
     "@types/react": "18.0.27",
     "@types/react-dom": "18.0.10",
-    "axios": "^1.3.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "luxon": "^3.3.0",
     "next": "13.1.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.5"
+    "typescript": "4.9.5",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/luxon": "^3.2.0",
