--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
   "dependencies": {
     "@next/font": "13.1.6",
-    "@supabase/supabase-js": "^2.8.0",
+    "@prisma/client": "^4.11.0",
     "@tanstack/react-query": "^4.28.0",
     "@trpc/client": "^10.17.0",
     "@trpc/next": "^10.17.0",
@@ -23,8 +24,10 @@
     "eslint-config-next": "13.1.6",
     "luxon": "^3.3.0",
     "next": "13.1.6",
+    "next-superjson-plugin": "^0.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "superjson": "^1.12.2",
     "typescript": "4.9.5",
     "zod": "^3.21.4"
   },
@@ -34,6 +37,7 @@
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
+    "prisma": "^4.11.0",
     "tailwindcss": "^3.2.4"
   }
 }
