--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "next-superjson-plugin": "^0.5.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.0",
     "superjson": "^1.12.2",
     "typescript": "4.9.5",
     "zod": "^3.21.4"
