--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "test": "jest",
     "generate-migration": "npx prisma migrate dev",
     "vercel-build": "prisma generate && prisma migrate deploy && next build"
   },
@@ -37,13 +38,20 @@
     "zod": "^3.21.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.23.5",
+    "@babel/preset-env": "^7.23.5",
+    "@babel/preset-typescript": "^7.23.3",
+    "@types/jest": "^29.5.10",
     "@types/luxon": "^3.2.0",
     "autoprefixer": "^10.4.13",
+    "babel-jest": "^29.7.0",
     "env-cmd": "^10.1.0",
+    "jest": "^29.7.0",
     "postcss": "^8.4.21",
     "prettier": "^2.8.3",
     "prettier-plugin-tailwindcss": "^0.2.2",
     "prisma": "^4.11.0",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "ts-node": "^10.9.1"
   }
 }
