--- a/package.json
+++ b/package.json
@@ -22,20 +22,22 @@
     "@trpc/react-query": "^10.17.0",
     "@trpc/server": "^10.17.0",
     "@types/node": "18.11.18",
-    "@types/react": "18.0.27",
-    "@types/react-dom": "18.0.10",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
+    "chart.js": "^4.4.3",
     "class-variance-authority": "^0.5.2",
     "eslint": "8.33.0",
     "eslint-config-next": "13.1.6",
     "luxon": "^3.3.0",
     "next": "13.1.6",
     "next-superjson-plugin": "^0.5.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.8.0",
     "superjson": "^1.12.2",
-    "typescript": "4.9.5",
+    "typescript": "^5.5.3",
     "zod": "^3.21.4"
   },
   "devDependencies": {
